--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Privacy Enhanced</title>
     <link href='https://fonts.googleapis.com/css?family=Nunito:400,300' rel='stylesheet' type='text/css'></link>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="scripts/process-form.js"></script>
+    <script src="process-form.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
