--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="scripts/process-form.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="scripts/policy-box.css">
 </head>
 <body>
 
