--- a/penguin/src/main/resources/index.html
+++ b/penguin/src/main/resources/index.html
@@ -21,7 +21,7 @@
 	<!-- Latest compiled JavaScript -->
 	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 	
-	<script type="text/javascript" src="scripts/form.js"></script>
+	<!--<script type="text/javascript" src="scripts/form.js"></script>-->
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>PolicyMe</title>
@@ -59,13 +59,47 @@ h1 {
 	background-color: rgb(196, 226, 242);
 	cursor: pointer;
 }
+	#privacyField {
+		/*display: none;*/
+		clear: both;
+		margin: 0 auto;
+		margin-bottom: 30px;
+		border: 1px solid ;
+		/*background-color: #bad3fc;*/
+		padding: 10px;
+		border-radius: 10px;
+		/*width: 0%;*/
+	}
+
+	#inputList {
+		/*margin-top: 60px !important;*/
+		font-family: 'Raleway', sans-serif;
+		/*border: 1px solid green;*/
+		clear: both;
+	}
+
+	th {
+		font-weight: 900;
+		font-size: 20px;
+		border-bottom: 1px dashed black;
+		/*padding : 5px;*/
+	}
+
+	th, td {
+		width : 25%;
+		vertical-align: center;
+		text-align: center;
+	}
 	</style>
 	<script>
+
+	var windowed;
+	var companyName;
+	var companyDescription;
+	
 	$(function(){
 	windowed = $("#form");
 })
-
-var companyName;
 
 function startForm() {
 	windowed.empty();
@@ -74,14 +108,17 @@ function startForm() {
 		+ `Company Name: `
 		+ `<input type="text" id="companyName"><br>`
 		+ `Company Description: <br>`
-		+ `<textarea rows="5" cols="60"></textarea><br>`
+		+ `<textarea rows="5" cols="60" id="description"></textarea><br>`
 		+ `<button type="submit">Continue</button>`
 		+ `</form>`).appendTo(windowed);
 }
 
 function submitComp() {
-	// companyName = $()
-	DOPInfo();
+	companyName = $("#companyName").val();
+//	console.log(companyName);
+	companyDescription = $("#description").val();
+//    console.log(companyDescription);
+    individualData()
 }
 
 function DOPInfo() {
@@ -99,22 +136,77 @@ function DOPInfo() {
 
 function individualData() {
 	windowed.empty();
-	$(`<form action="" onsubmit="return false;">`
-		+ `Collected Individual User Data: <br>`
-		+ `<input type="checkbox" value="email"> Email<br>`
-		+ `<input type="checkbox" value="name"> Name<br>`
-		+ `<input type="checkbox" value="address"> Address<br>`
-		+ `<button onclick="DOPInfo()">Back</button>`
-		+ `<button onclick="showResults()">Continue</button>`
+	$(`<h2>Collected Individual User Data</h2> <br>`
+		+ `<form id="privacyField">`
+        + `<input type="text" id="type" placeholder="Data Type"><br>`
+        + `<textarea rows="5" cols="60" id="dataDescription"></textarea><br>`
+		+ `<input type="checkbox" id="shared" value="share"> Share <br>`
+        + `<button id="save-data" onclick="return saveData()">Save</button>`
+        + `</form>`
+		+ `<table style="width:100%" id="inputList">`
+		+ `<tr style='height: 60px'><th>Data Type</th><th>Reason</th><th>Share?</th></tr>`
+        + `</table>`
+		+ `<form action="" onsubmit="return false;">`
+//		+ `<input type="text" placeholder="email"> <br>`
+		+ `<button onclick="startForm()">Back</button>`
+		+ `<button type="submit" onclick="showResults()">Continue</button>`
 		+ `</form>`).appendTo(windowed);
 }
 
 function showResults() {
 	windowed.empty();
-
-	// $(`Company Name:` +)
-
+	$(`<div>Company Name: ${companyName} </div>`).appendTo(windowed);
 }
+
+function saveData() {
+    var type = $("#type").val();;
+    var reason = $("#dataDescription").val();
+    var share;
+    if ($('#shared').is(":checked")) {
+        share = 1;
+	} else {
+        share = 0;
+	}
+//    var share = $("#shared").val();
+//	console.log(reason);
+//    console.log(share);
+
+    $.ajax({
+        url: "",
+        type: "POST",
+        data: JSON.stringify({"companyName": companyName, "dataType": type, "reason": reason, "shared": share}),
+        contentType: "application/json",
+        dataType: "json",
+        success: function (id) {
+            console.log("success");
+//            getReceipt(id);
+        },
+        error: function (){
+//            alert("Your receipt entry was not properly processed. Please resubmit your receipt information.");
+        }
+    });
+	return false;
+}
+
+//    function getInputs(receiptID) {
+//
+//        $.getJSON("/receipts", function(receipts){
+//            var receipt = receipts[receiptID - 1];
+//            var tags = receipt.tags;
+//                $(`<tr class="receipt" style="height: 100px"->`
+//                    + `<td class="time">${receipt.created}</td>`
+//                    + `<td class="merchant">${receipt.merchant}</td>`
+//                    + `<td class="amount">${receipt.amount}</td>`
+//                    + `<td class="tags" id=${receipt.id.toString() + "-Tags"}>`
+//                    + `<div id=${receipt.id.toString() + "-TagsList"}></div>`
+//                    + `</td>`
+//                    + `</tr>`)
+//                    .appendTo($("#receiptList"));
+//                addTags(tags, receipt.id);
+//                addButton(receipt.id);
+//        });
+//    }
+
 	</script>
 </head>
 
@@ -123,7 +215,7 @@ function showResults() {
 	<h1>PolicyMe</h1>
 
 	<div id="form">
-		<button id="start" onclick="startForm()">Start</button>
+		<button id="start" onclick="startForm(); return false;">Start</button>
 	</div>
 
 	<div id="footer"> 
