--- a/penguin/src/main/resources/index.html
+++ b/penguin/src/main/resources/index.html
@@ -269,7 +269,7 @@ function saveData() {
 	</div>
 	<div class="topRowCol">What we do</div>
 	<!--<div class="topRowCol" id="form">-->
-	<div class="topRowCol">
+	<div class="topRowCol" id = form>
 		<button id="start" onclick="startForm(); return false;">Start</button>
 	</div>
 	<div class="topRowCol">Contact Us</div>
@@ -279,14 +279,15 @@ function saveData() {
 <!--<header class="bgimg">-->
 <!--Hi-->
 <!--</header>-->
-<div>
-	<img src="privacy.jpeg" width="100%">
+<div id="privacyImage">
+	<img src="https://article.images.consumerreports.org/prod/content/dam/cro/magazine-articles/2016/November/CR-Magazine-Hero-Privacy-floor-grey-09-16" height="674" width="1979"/>
+
 </div>
 
 
 <div id="footer">
 
-	</div>
+</div>
 
 <!-- </div> -->
 
