--- a/penguin/src/main/resources/testForm.html
+++ b/penguin/src/main/resources/testForm.html
@@ -46,7 +46,7 @@
         /* Show div */
         function show(dived, input) {
 
-            var sharedString = "This data is being shared with third parties biiiitch.";
+            var sharedString = "This data is being shared with third parties.";
 
             // edit inner html according to input field
             var inputID = input.getAttribute('id');
