--- a/penguin/src/main/resources/index.html
+++ b/penguin/src/main/resources/index.html
@@ -346,9 +346,9 @@ function saveData() {
 	<button id="start" onclick="startForm(); return false;">Start</button>
 </div>
 
-<div id="privacyImage">
-	<img src="https://article.images.consumerreports.org/prod/content/dam/cro/magazine-articles/2016/November/CR-Magazine-Hero-Privacy-floor-grey-09-16" height="674" width="1979"/>
-</div>
+<!--<div id="privacyImage">-->
+	<!--<img src="https://article.images.consumerreports.org/prod/content/dam/cro/magazine-articles/2016/November/CR-Magazine-Hero-Privacy-floor-grey-09-16" height="674" width="1979"/>-->
+<!--</div>-->
 
 
 <div id="footer">
