--- a/penguin/src/main/resources/testForm.html
+++ b/penguin/src/main/resources/testForm.html
@@ -58,7 +58,7 @@
                     if (nameInput[1]) {sharedAppend = " " + sharedString};
                     dived.innerHTML = nameInput[0] + sharedAppend; //"Your name is being collected and will be stored in our data base.";
                 }
-            } else if (inputID == "mail") {
+            } else if (inputID == "email") {
                 if (data[inputID] != null) {
                     var nameInput = data[inputID];
                     var sharedAppend = "";
@@ -267,8 +267,8 @@
         <label for="name">Name:</label>
         <input type="text" id="name" name="user_name"></input>
 
-        <label for="mail">Email:</label>
-        <input type="email" id="mail" name="user_email"></input>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="user_email"></input>
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="user_password"></input>
