--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-	<title>Steak House - Free HTML CSS Template</title>
+	<title>WATTx Team</title>
 <!--
 
 Template 2083 Steak House
@@ -51,7 +51,7 @@ http://www.tooplate.com/view/2083-steak-house
       <div class="row">
 
           <div class="col-md-offset-2 col-md-8 col-sm-12">
-              <h1 class="wow fadeInUp" data-wow-delay="0.6s">Policy Me !!</h1>
+              <h1 class="wow fadeInUp" data-wow-delay="0.6s" id="title">Policy Me !!</h1>
               <p class="wow fadeInUp" data-wow-delay="1.0s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
               <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">Discover Now</a>
           </div>
@@ -80,8 +80,8 @@ http://www.tooplate.com/view/2083-steak-house
         <li><a href="#about" class="smoothScroll">About</a></li>
         <li><a href="#menu" class="smoothScroll">Menu</a></li>
         <li><a href="#team" class="smoothScroll">Team</a></li>
-        <li><a href="#gallery" class="smoothScroll">Gallery</a></li>
         <li><a href="#contact" class="smoothScroll">Contact</a></li>
+        <li><a href="#login" class="smoothScroll">Login</a></li>
       </ul>
     </div>
 
@@ -526,6 +526,22 @@ http://www.tooplate.com/view/2083-steak-house
 		</div>
 	</div>
 </section>
+
+<!-- Login section -->
+<section id="login" class="parallax-section">
+  <div class="container">
+    <div class="row">
+        <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+          <div class="wow fadeInUp section-title" data-wow-delay="0.3s">
+            <h2>Log In</h2>
+            <h4>Let's get started!</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+
 
 <!-- Footer section -->
 <footer>
