--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -45,18 +45,19 @@ http://www.tooplate.com/view/2083-steak-house
 
 
 <!-- Home section -->
+<!-- Home section -->
 <section id="home" class="parallax-section">
-  <div class="gradient-overlay"></div>
+    <div class="gradient-overlay"></div>
     <div class="container">
-      <div class="row">
+        <div class="row">
 
-          <div class="col-md-offset-2 col-md-8 col-sm-12">
-              <h1 class="wow fadeInUp" data-wow-delay="0.6s" id="title">Policy Me !!</h1>
-              <p class="wow fadeInUp" data-wow-delay="1.0s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-              <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">Discover Now</a>
-          </div>
+            <div class="col-md-offset-2 col-md-8 col-sm-12">
+                <h1 class="wow fadeInUp" data-wow-delay="0.6s">CheckMate</h1>
+                <p class="wow fadeInUp" data-wow-delay="1.0s">CheckMate helps businesses navigate GDPR and reach compliance.</p>
+                <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">Learn More</a>
+            </div>
 
-      </div>
+        </div>
     </div>
 </section>
 
@@ -71,7 +72,7 @@ http://www.tooplate.com/view/2083-steak-house
         <span class="icon icon-bar"></span>
         <span class="icon icon-bar"></span>
       </button>
-      <a href="#" class="navbar-brand">Steak House</a>
+      <a href="#" class="navbar-brand">WATTx</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -533,9 +534,11 @@ http://www.tooplate.com/view/2083-steak-house
     <div class="row">
         <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
           <div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-            <h2>Log In</h2>
+            <h2><a href="/survey.html">Log In</a></h2>
             <h4>Let's get started!</h4>
           </div>
+        </div>
+        <div >
         </div>
       </div>
     </div>
