--- a/wattx_app/static/survey.html
+++ b/wattx_app/static/survey.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>Steak House - Free HTML CSS Template</title>
+    <title>WATTx Team</title>
     <!--
 
     Template 2083 Steak House
@@ -51,9 +51,9 @@
         <div class="row">
 
             <div class="col-md-offset-2 col-md-8 col-sm-12">
-                <h1 class="wow fadeInUp" data-wow-delay="0.6s">Policy Me !!</h1>
-                <p class="wow fadeInUp" data-wow-delay="1.0s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-                <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">Discover Now</a>
+                <h1 class="wow fadeInUp" data-wow-delay="0.6s">CheckMate</h1>
+                <p class="wow fadeInUp" data-wow-delay="1.0s">CheckMate helps businesses navigate GDPR and reach compliance.</p>
+                <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">Learn More</a>
             </div>
 
         </div>
@@ -63,13 +63,17 @@
 <section id="survey">
     <div id="container">
 
-<div>QUESTION 1 : How do you process your data </div>
+        <div id="form">
+            <!--<button id="start" onclick="startForm(); return false;">Start</button>-->
+        </div>
 
-    <div> Enter your response : <input type="text" name="fname"> </div>
-    <div>
-        <button  class="nextButton" onclick="changeQuestion();">Next</button>
-        <button  class="backButton">Back</button>
-    </div>
+        <!--<div>QUESTION 1 : How do you process your data </div>-->
+
+        <!--<div> Enter your response : <input type="text" name="fname"> </div>-->
+        <!--<div>-->
+            <!--<button  class="nextButton" onclick="changeQuestion();">Next</button>-->
+            <!--<button  class="backButton">Back</button>-->
+        <!--</div>-->
     </div>
 </section>
 
@@ -121,21 +125,20 @@
 </section>
 
 <!-- javscript js -->
-<script>
+<!--<script>-->
 
-function changeQuestion() {
+<!--function changeQuestion() {-->
 
-$("#survey").empty();
-$( `<div>QUESTION {question Number}</div>`
-+ `<div>Response :</div>`
-+ ` <div> Enter your response : <input type="text" name="fname"> </div>`
-+ ` <div>`
-    + `<a href="#" class="myButton" onclick="changeQuestion();">Next</a>`
-    +  `<a href="#" class="myButton">Back</a>`
-    +  `</div>`).appendTo("#survey");
-}
-</script>
-
+<!--$("#survey").empty();-->
+<!--$( `<div>QUESTION {question Number}</div>`-->
+<!--+ `<div>Response :</div>`-->
+<!--+ ` <div> Enter your response : <input type="text" name="fname"> </div>`-->
+<!--+ ` <div>`-->
+    <!--+ `<a href="#" class="myButton" onclick="changeQuestion();">Next</a>`-->
+    <!--+  `<a href="#" class="myButton">Back</a>`-->
+    <!--+  `</div>`).appendTo("#survey");-->
+<!--}-->
+<!--</script>-->
 
 
 <script src="js/jquery.js"></script>
@@ -157,6 +160,7 @@ $( `<div>QUESTION {question Number}</div>`
 <script src="js/wow.min.js"></script>
 
 <script src="js/custom.js"></script>
+<script src="js/survey.js"></script>
 
 </body>
 </html>
