--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -2,38 +2,40 @@
 <html lang="en">
 <head>
 
-	<title>WATTx Team</title>
-<!--
+    <title>CheckMate</title>
+    <!--
 
-Template 2083 Steak House
+    Template 2083 Steak House
 
-http://www.tooplate.com/view/2083-steak-house
+    http://www.tooplate.com/view/2083-steak-house
 
--->
-  	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="">
-  	<meta name="description" content="">
+    -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
 
-	<!-- stylesheets css -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- stylesheets css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
-  	<link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
 
-	<link rel="stylesheet" href="css/animate.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
-  	<link rel="stylesheet" href="css/nivo-lightbox.css">
-  	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
+    <link rel="stylesheet" href="css/nivo-lightbox.css">
+    <link rel="stylesheet" href="css/nivo_themes/default/default.css">
 
-  	<link rel="stylesheet" href="css/hover-min.css">
-  	<link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="css/hover-min.css">
+    <link rel="stylesheet" href="css/flexslider.css">
 
-	<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
-  	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-  	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
+    <link rel="icon" href="images/lock.png">
+
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
 
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
@@ -43,27 +45,8 @@ http://www.tooplate.com/view/2083-steak-house
 	<div class="sk-spinner sk-spinner-pulse"></div>
 </div>
 
-
-<!-- Home section -->
-<!-- Home section -->
-<section id="home" class="parallax-section">
-    <div class="gradient-overlay"></div>
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-offset-2 col-md-8 col-sm-12">
-                <h1 class="wow fadeInUp" data-wow-delay="0.6s">CheckMate</h1>
-                <p class="wow fadeInUp" data-wow-delay="1.0s">CheckMate helps businesses navigate GDPR and reach compliance.</p>
-                <a href="#feature" class="wow fadeInUp btn btn-default hvr-bounce-to-top smoothScroll" data-wow-delay="1.3s">Learn More</a>
-            </div>
-
-        </div>
-    </div>
-</section>
-
-
 <!-- Navigation section -->
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
 
     <div class="navbar-header">
@@ -72,29 +55,39 @@ http://www.tooplate.com/view/2083-steak-house
         <span class="icon icon-bar"></span>
         <span class="icon icon-bar"></span>
       </button>
-      <a href="#" class="navbar-brand">WATTx</a>
+      <a href="index.html" class="navbar-brand">CheckMate</a>
     </div>
     <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#top" class="smoothScroll">Home</a></li>
-        <li><a href="#feature" class="smoothScroll">Features</a></li>
-        <li><a href="#about" class="smoothScroll">About</a></li>
-        <li><a href="#menu" class="smoothScroll">Menu</a></li>
-        <li><a href="#team" class="smoothScroll">Team</a></li>
-        <li><a href="#contact" class="smoothScroll">Contact</a></li>
-        <li><a href="#login" class="smoothScroll">Login</a></li>
+      <ul class="nav navbar-nav navbar-left">
+        <li><a href="index.html" class="smoothScroll">Home</a></li>
+        <li><a href="about.html" class="smoothScroll">About</a></li>
+        <li><a href="team.html" class="smoothScroll">Team</a></li>
+        <li><a href="contact.html" class="smoothScroll">Contact</a></li>
       </ul>
+      <a href="login.html" class="smoothScroll btn btn-default navbar-right">Login or Sign Up</a>
     </div>
-
   </div>
 </div>
 
 
+<!-- Home section -->
+<section id="home" class="parallax-section">
+  <div class="gradient-overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-2 col-md-8 col-sm-12">
+        <h1 class="wow fadeInUp" data-wow-delay="0.6s">CheckMate</h1>
+        <p class="wow fadeInUp" data-wow-delay="1.0s">CheckMate helps businesses navigate GDPR to reach compliance.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- TODO: Fix -->
 <!-- Feature section -->
 <section id="feature" class="parallax-section">
   <div class="container">
     <div class="row">
-
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
           <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
             <h2>Why Choose Us?</h2>
@@ -140,7 +133,7 @@ http://www.tooplate.com/view/2083-steak-house
 
 
 <!-- About section -->
-<section id="about" class="parallax-section">
+<!-- <section id="about" class="parallax-section">
 	<div class="container">
 		<div class="row">
 
@@ -158,10 +151,10 @@ http://www.tooplate.com/view/2083-steak-house
         <h3>Nunc ullamcorper suscipit neque, ac malesuada purus molestie non.</h3>
       </div>
 
-      <div class="wow fadeInUp col-md-5 col-sm-7" data-wow-delay="0.5s">
+      <div class="wow fadeInUp col-md-5 col-sm-7" data-wow-delay="0.5s">-->
 
         <!-- flexslider -->
-        <div class="flexslider">
+        <!-- <div class="flexslider">
           <ul class="slides">
 
             <li>
@@ -194,9 +187,9 @@ http://www.tooplate.com/view/2083-steak-house
 
 		</div>
 	</div>
-</section>
+</section> -->
 
-
+<!-- TODO: Fix -->
 <!-- Video section -->
 <section id="video" class="parallax-section">
   <div class="overlay"></div>
@@ -214,7 +207,7 @@ http://www.tooplate.com/view/2083-steak-house
 </section>
 
 <!-- Menu section -->
-<section id="menu" class="parallax-section">
+<!-- <section id="menu" class="parallax-section">
   <div class="container">
     <div class="row">
 
@@ -297,10 +290,10 @@ http://www.tooplate.com/view/2083-steak-house
 
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Team section -->
-<section id="team" class="parallax-section">
+<!-- <section id="team" class="parallax-section">
   <div class="container">
     <div class="row">
 
@@ -377,10 +370,10 @@ http://www.tooplate.com/view/2083-steak-house
 
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Gallery section -->
-<section id="gallery" class="parallax-section">
+<!-- <section id="gallery" class="parallax-section">
   <div class="container">
     <div class="row">
 
@@ -391,10 +384,10 @@ http://www.tooplate.com/view/2083-steak-house
             <h2>Food Gallery</h2>
             <h4>we have special foods</h4>
         </div>
-      </div>
+      </div>-->
 
           <!-- iso section -->
-          <div class="iso-section wow fadeInUp" data-wow-delay="0.6s">
+          <!-- <div class="iso-section wow fadeInUp" data-wow-delay="0.6s">
 
             		<ul class="filter-wrapper clearfix">
                         <li><a href="#" data-filter="*" class="selected opc-main-bg">All</a></li>
@@ -403,9 +396,10 @@ http://www.tooplate.com/view/2083-steak-house
                         <li><a href="#" class="opc-main-bg" data-filter=".lunch">Lunch</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".dinner">Dinner</a></li>
                     </ul>
+                    -->
 
                     <!-- iso box section -->
-                    <div class="iso-box-section wow fadeInUp" data-wow-delay="0.9s">
+                    <!-- <div class="iso-box-section wow fadeInUp" data-wow-delay="0.9s">
                       <div class="iso-box-wrapper col4-iso-box">
 
                         <div class="iso-box breakfast pizza lunch col-md-4 col-sm-6">
@@ -501,10 +495,10 @@ http://www.tooplate.com/view/2083-steak-house
 
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- Contact section -->
-<section id="contact" class="parallax-section">
+<!-- <section id="contact" class="parallax-section">
   <div class="overlay"></div>
 	<div class="container">
 		<div class="row">
@@ -526,10 +520,10 @@ http://www.tooplate.com/view/2083-steak-house
 
 		</div>
 	</div>
-</section>
+</section> -->
 
 <!-- Login section -->
-<section id="login" class="parallax-section">
+<!-- <section id="login" class="parallax-section">
   <div class="container">
     <div class="row">
         <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
@@ -542,7 +536,7 @@ http://www.tooplate.com/view/2083-steak-house
         </div>
       </div>
     </div>
-</section>
+</section> -->
 
 
 
@@ -577,7 +571,7 @@ http://www.tooplate.com/view/2083-steak-house
 </footer>
 
 <!-- Copyright section -->
-<section id="copyright">
+<!-- <section id="copyright">
   <div class="container">
     <div class="row">
 
@@ -591,7 +585,7 @@ http://www.tooplate.com/view/2083-steak-house
 
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- javscript js -->
 <script src="js/jquery.js"></script>
