questionaire + style edits

--- a/wattx_app/static/login.html
+++ b/wattx_app/static/login.html
@@ -59,12 +59,14 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="index.html" class="smoothScroll">Home</a></li>
-        <li><a href="about.html" class="smoothScroll">About</a></li>
-        <li><a href="team.html" class="smoothScroll">Team</a></li>
-        <li><a href="contact.html" class="smoothScroll">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
-      <a href="login.html" class="smoothScroll btn btn-default navbar-right" style="background: #6e7d93 !important; color:  #ffffff;">Login or Sign Up</a>
+      <!-- TODO: Fix -->
+      <a href="survey.html" class="btn btn-default navbar-right" style="background: #6e7d93 !important; color:  #ffffff;">Bypass</a>
+      <!-- <a href="login.html" class="btn btn-default navbar-right" style="background: #6e7d93 !important; color:  #ffffff;">Login or Sign Up</a> -->
     </div>
   </div>
 </div>
@@ -87,14 +89,16 @@
 <section id="login">
     <div id="container">
         <!-- TODO: fix form -->
-        <div class="col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10">
-            <div id="login_div">
-                <form id="contact-form" onsubmit="addUser(); return false;">
-                    <input name="name" type="text" id="name" class="form-control" placeholder="Company Name" required>
-                    <input name="email" type="email" id="email" class="form-control" placeholder="Email" required>
-                    <input name="password" type="password" id="password" class="form-control" placeholder="Password" required>
-                    <input type="submit" class="form-control submit" value="Sign Up">
-                </form>
+        <div class="row">
+            <div class="col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10">
+                <div id="login_div">
+                    <form id="contact-form" onsubmit="addUser(); return false;">
+                        <input name="name" type="text" id="name" class="form-control" placeholder="Company Name" required>
+                        <input name="email" type="email" id="email" class="form-control" placeholder="Email" required>
+                        <input name="password" type="password" id="password" class="form-control" placeholder="Password" required>
+                        <input type="submit" class="form-control submit" value="Sign Up">
+                    </form>
+                </div>
             </div>
         </div>
 
