--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -59,12 +59,12 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="index.html" class="smoothScroll">Home</a></li>
-        <li><a href="about.html" class="smoothScroll">About</a></li>
-        <li><a href="team.html" class="smoothScroll">Team</a></li>
-        <li><a href="contact.html" class="smoothScroll">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="team.html">Team</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
-      <a href="login.html" class="smoothScroll btn btn-default navbar-right">Login or Sign Up</a>
+      <a href="login.html" class="btn btn-default navbar-right">Login or Sign Up</a>
     </div>
   </div>
 </div>
