--- a/wattx_app/static/checklist.html
+++ b/wattx_app/static/checklist.html
@@ -64,7 +64,6 @@
         <li><a href="team.html">Team</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <a href="checklist.html" class="btn btn-default navbar-right" style="background: #6e7d93 !important; color:  #ffffff;">Bypass</a>
       <!-- <a href="login.html" class="btn btn-default navbar-right">Login or Sign Up</a> -->
     </div>
   </div>
@@ -83,13 +82,13 @@
   </div>
 </section>
 
-<!-- Questionaire section -->
-<section id="survey">
+<!-- Checklist section -->
+<section id="checklist">
     <div id="container">
         <div class="row">
 
             <div class="col-md-offset-2 col-md-8 col-sm-12">
-                <div id="form">
+                <div id="recommendations">
                 </div>
             </div>
         </div>
@@ -100,6 +99,7 @@
 
     </div>
 </section>
+
 
 
 <!-- TODO: fix footer -->
@@ -133,23 +133,6 @@
     </div>
 </footer>
 
-<!-- Copyright section -->
-<!-- <section id="copyright">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-8 col-sm-8 col-xs-8">
-                <p>Copyright © 2016 Steak House Company - Designed by <a class="designed-by" href="https://plus.google.com/+Tooplate/" target="_blank">Tooplate</a></p>
-            </div>
-
-            <div class="col-md-4 col-sm-4 text-right">
-                <a href="#home" class="fa fa-angle-up smoothScroll gototop"></a>
-            </div>
-
-        </div>
-    </div>
-</section> -->
-
 <!-- javscript js -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -170,7 +153,7 @@
 <script src="js/wow.min.js"></script>
 
 <script src="js/custom.js"></script>
-<script src="js/survey.js"></script>
+<script src="js/checklist.js"></script>
 
 </body>
 </html>
