--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -571,7 +571,7 @@
 </footer>
 
 <!-- Copyright section -->
-<section id="copyright">
+<!-- <section id="copyright">
   <div class="container">
     <div class="row">
 
@@ -585,7 +585,7 @@
 
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- javscript js -->
 <script src="js/jquery.js"></script>
