--- a/wattx_app/static/checklist.html
+++ b/wattx_app/static/checklist.html
@@ -86,8 +86,13 @@
 <section id="checklist">
     <div id="container">
         <div class="row">
+            <div id="side" class="col-md-offset-1 col-md-1">
+              <h3>Checklist</h3>
+              <input type="checkbox" id="completed" value="todo"> Incomplete<br>
+              <input type="checkbox" id="flag" value="flag"> Flagged<br>
+            </div>
 
-            <div class="col-md-offset-2 col-md-8 col-sm-12">
+            <div class="col-md-offset-1 col-md-8 col-sm-12">
                 <div id="recommendations">
                 </div>
             </div>
