--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -91,7 +91,7 @@
       <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
           <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
             <h2>Why Choose Us?</h2>
-            <h4>Steak House HTML CSS Template</h4>
+            <h4>A better path to GDPR compliance.</h4>
           </div>
       </div>
 
@@ -100,30 +100,31 @@
       <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
         <div class="feature-thumb">
           <div class="feature-icon">
-             <span><i class="fa fa-cutlery"></i></span>
+            <span><img class="fa" src="images/checklist.svg" width="65" height="65"></span>
+             <!-- <span><i class="fa fa-cutlery"></i></span> -->
           </div>
-          <h3>SPECIAL DISH</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+          <h3>COMPREHENSIVE GDPR CHECKLIST</h3>
+          <p>We've boiled down the legalese of GDPR into a comprehensive checklist to help you establish your preparedness for reaching compliance.</p>
         </div>
       </div>
 
       <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
         <div class="feature-thumb">
           <div class="feature-icon">
-            <span><i class="fa fa-coffee"></i></span>
+            <span><img class="fa" src="images/upArrow.svg" width="40" height="40"></span>
           </div>
-          <h3>BLACK COFFEE</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+          <h3>GDPR UPDATES</h3>
+          <p>We will update you with any changes to GDPR that may affect you and notify you of relevant court cases to help ensure you remain compliant within the expecations of regulators.</p>
         </div>
       </div>
 
       <div class="col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.9s">
         <div class="feature-thumb">
           <div class="feature-icon">
-            <span><i class="fa fa-bell-o"></i></span>
+            <span><img class="fa" src="images/briefcase.svg" width="55" height="55"></span>
           </div>
-           <h3>DINNER</h3>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+           <h3>TECHNICAL &amp; LEGAL PROFESSIONALS</h3>
+           <p>We offer open access to an extensive network of legal and technology firms that can help you become GDPR compliant at a fee that works for you. </p>
         </div>
       </div>
 
@@ -197,7 +198,7 @@
       <div class="row">
 
           <div class="col-md-offset-2 col-md-8 col-sm-12">
-              <a class="popup-youtube" href="https://www.youtube.com/watch?v=CRhCMl7ZI84"><i class="fa fa-play"></i></a>
+              <a class="popup-youtube" href="https://www.youtube.com/watch?v=2lNa_Vbi-l4"><i class="fa fa-play"></i></a>
               <h2 class="wow fadeInUp" data-wow-delay="0.5s">Watch the video</h2>
               <p class="wow fadeInUp" data-wow-delay="0.8s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
           </div>
