--- a/wattx_app/static/index.html
+++ b/wattx_app/static/index.html
@@ -200,7 +200,7 @@
           <div class="col-md-offset-2 col-md-8 col-sm-12">
               <a class="popup-youtube" href="https://www.youtube.com/watch?v=2lNa_Vbi-l4"><i class="fa fa-play"></i></a>
               <h2 class="wow fadeInUp" data-wow-delay="0.5s">Watch the video</h2>
-              <p class="wow fadeInUp" data-wow-delay="0.8s">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
+              <p class="wow fadeInUp" data-wow-delay="0.8s">Learn more about GDPR and how CheckMate can help!</p>
           </div>
 
       </div>
@@ -546,25 +546,14 @@
 	<div class="container">
 		<div class="row">
 
-              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.3s">
-                <h3>About the house</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod 
-                	tincidunt ut laoreet. Dolore magna aliquam erat volutpat ipsum.</p>
+              <div class="wow fadeInUp col-sm-offset-1 col-md-6 col-sm-4" data-wow-delay="1.3s">
+                <img src="images/WATTx_Logo.png" width="450px" style= "margin-top: 25px">
               </div>  
         
               <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.6s">
-                <h3>Contact Detail</h3>
-                <p>123 Delicious Street, San Francisco, CA 10110</p>
-                <p>010-020-0780</p>
-                <p>hello@company.com</p>
-              </div> 
-        
-              <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="1.9s">
-                <h3>Opening Hours</h3>
-                <strong>Monday - Firday</strong>
-                <p>11:00 AM - 10:00 PM</p>
-                <strong>Saturday - Sunday</strong>
-                <p>10:00 AM - 09:00 PM</p>
+                <h3>Contact Details</h3>
+                <p>2 East Loop Rd., NY, NY 10044</p>
+                <p>(310) 254-5740  |  contact@checkmate.com</p>
               </div> 
 
 		</div>
